--- a/about and contact/about-contact.html
+++ b/about and contact/about-contact.html
@@ -12,21 +12,21 @@
 <body>
   
   <div class="about-section">
-    <h1>About Us Page</h1>
-    <p>Some text about who we are and what we do.</p>
-    <p>Resize the browser window to see that this page is responsive by the way.</p>
+    <h1>About Us MidHeavy</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quae quasi dolorum quaerat accusantium libero eos labore quisquam porro impedit excepturi blanditiis quos ipsam dolores asperiores magni accusamus laudantium aliquid corrupti tempora, similique a ab. Repudiandae quo deleniti cum, ducimus odit id maiores, odio aperiam quaerat pariatur autem quos nihil exercitationem, quidem distinctio ab suscipit enim praesentium. Delectus distinctio quod exercitationem dolorem ut hic sunt fugiat at atque ipsum unde repudiandae eligendi ratione nesciunt, ab quaerat omnis fuga fugit similique animi veritatis, ipsam deserunt aspernatur? Veniam eveniet numquam, culpa tempore perferendis perspiciatis, quibusdam eius ut quam quos accusantium cum natus!</p>
+    
   </div>
   
   <h2 style="text-align:center">Our Team</h2>
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="/images/jerry.jpg" alt="Jerry" style="width:100%">
+        <img src="./images/jerry.jpg" alt="Jerry" style="width:100%">
         <div class="container">
-          <h2>Jane Doe</h2>
-          <p class="title">CEO & Founder</p>
+          <h2>Jerry</h2>
+          <p class="title">CEO</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>jane@example.com</p>
+          <p>email</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -34,12 +34,12 @@
   
     <div class="column">
       <div class="card">
-        <img src="/images/alane.jpg" alt="Alane" style="width:100%">
+        <img src="./images/alane.jpg" alt="Alane" style="width:100%">
         <div class="container">
-          <h2>Mike Ross</h2>
+          <h2>Alane</h2>
           <p class="title">Art Director</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>mike@example.com</p>
+          <p>email</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -47,24 +47,24 @@
   
     <div class="column">
       <div class="card">
-        <img src="/images/george.jpg" alt="George" style="width:100%">
+        <img src="./images/george.jpg" alt="George" style="width:100%">
         <div class="container">
-          <h2>John Doe</h2>
+          <h2>George</h2>
           <p class="title">Designer</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>john@example.com</p>
+          <p>email</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
     </div>
     <div class="column">
       <div class="card">
-        <img src="/images/kramer.jpg" alt="Kramer" style="width:100%">
+        <img src="./images/kramer.jpg" alt="Kramer" style="width:100%">
         <div class="container">
-          <h2>John Doe</h2>
+          <h2>Kramer</h2>
           <p class="title">Designer</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>john@example.com</p>
+          <p>email</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -85,6 +85,7 @@
         <option value="australia">Australia</option>
         <option value="canada">Canada</option>
         <option value="usa">USA</option>
+        <option value="new zealand">New Zealand</option>
       </select>
   
       <label for="subject">Subject</label>
