made changes to CSS and HTML
made changes to CSS and HTML
adding more divs and containers, cause boy does it need it

--- a/about and contact/about-contact.html
+++ b/about and contact/about-contact.html
@@ -17,12 +17,12 @@
     
   </div>
   
-  <h2 style="text-align:center">Our Team</h2>
-  <div class="row">
+  <h2 style="text-align:center">About The Team</h2>
+  
     <div class="column">
       <div class="card">
         <img src="./images/jerry.jpg" alt="Jerry" style="width:100%">
-        <div class="container">
+        <div class="container-inner">
           <h2>Jerry</h2>
           <p class="title">CEO</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
@@ -35,7 +35,7 @@
     <div class="column">
       <div class="card">
         <img src="./images/alane.jpg" alt="Alane" style="width:100%">
-        <div class="container">
+        <div class="container-inner">
           <h2>Alane</h2>
           <p class="title">Art Director</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
@@ -48,7 +48,7 @@
     <div class="column">
       <div class="card">
         <img src="./images/george.jpg" alt="George" style="width:100%">
-        <div class="container">
+        <div class="container-inner">
           <h2>George</h2>
           <p class="title">Designer</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
@@ -60,16 +60,16 @@
     <div class="column">
       <div class="card">
         <img src="./images/kramer.jpg" alt="Kramer" style="width:100%">
-        <div class="container">
+        <div class="container-inner">
           <h2>Kramer</h2>
           <p class="title">Designer</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>email</p>
+          <p>Kramer@midheavy.com</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
     </div>
-  </div>
+  
 
   <div class="container">
     <form action="action_page.php">
