--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
   </head>
   <body>
     <!-- particles.js container -->
-    <div class="image-box d-flex">
-      <div>
-        <div id="logo-container image-box d-flex">
+    <div class= "image-box d-flex">
+      <div class="navbar-wrapper">
+        <ul class="navbar">
+          <li><a href="">LINK1</a></li>
+          <li><a href="">LINK2</a></li>
+          <li><a href="">LINK3</a></li>
+          <li><a href="">LINK4</a></li>
+          <li><a href="">LINK5</a></li>
+        </ul>
+      </div>
+      <div class="centered d-flex">
+        <div id="logo-container centered d-flex">
           <div class="logo">
             <svg id="logo-svg" width="302" height="212" viewBox="0 0 302 212">
               <path id="backPath1" d="M31.3713 1.70423L0.343294 209.204C0.16252 210.413 1.09893 211.5 2.3213 211.5H41.1092C42.0973 211.5 42.9372 210.779 43.0863 209.802L74.7608 2.3018C74.9456 1.091 74.0085 0 72.7837 0H33.3493C32.359 0 31.5178 0.724782 31.3713 1.70423Z" fill="#C4C4C4" />
@@ -36,8 +45,8 @@
             </svg>
           </div>
         </div>
+        <p>MidHeavy.Tech</p>
       </div>
-      <p>MidHeavy.Tech</p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
