--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <div class= "image-box d-flex">
       <div class="navbar-wrapper">
         <ul class="navbar">
-          <li><a href="">LINK1</a></li>
-          <li><a href="">LINK2</a></li>
-          <li><a href="">LINK3</a></li>
-          <li><a href="">LINK4</a></li>
-          <li><a href="">LINK5</a></li>
+          <li class="nav-logo-wrapper"><a href=""><img src="assets/new_logo_trans.png" class="nav-logo" width="93.75" height="92.25" alt="logo"><div class="nav-mh">MidHeavy</div></a></li>
+          <li class="nav-link"><a href="">Link1</a></li>
+          <li class="nav-link"><a href="">Link2</a></li>
+          <li class="nav-link"><a href="">Link3</a></li>
+          <li class="nav-link"><a href="">Link4</a></li>
+          <li class="nav-link"><a href="">Link5</a></li>
         </ul>
       </div>
       <div class="centered d-flex">
