--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <!-- <script type="module" src="/app.js" /> -->
     <div id="particles-js"></div>
 
-     <!-- scripts -->
+     <!-- libraries -->
      <script src="./js/lib/bootstrap.js"></script>
      <script src="./js/lib/particles.js"></script>
-   
+     <!-- scripts -->
      <script src="./js/app.js"></script>
   </body>
 </html>
