--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           <li class="nav-logo-wrapper"><a url="/index.html"><img src="assets/logo.svg" class="nav-logo" width="93.75" height="92.25" alt="logo"><div class="nav-mh">MidHeavy</div></a></li>
           <li class="nav-link"><a href="/about.html">About</a></li>
 
-          <li class="nav-link"><a href="">Link2</a></li>
+          <!-- <li class="nav-link"><a href="">Link2</a></li>
           <li class="nav-link"><a href="">Link3</a></li>
           <li class="nav-link"><a href="">Link4</a></li>
-          <li class="nav-link"><a href="">Link5</a></li>
+          <li class="nav-link"><a href="">Link5</a></li> -->
         </ul>
       </div>
       <div class="centered d-flex">
