--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
             >
           </li>
           <li class="nav-link"><a href="/about.html">About</a></li>
-          <li class="nav-link"><a href="">Link2</a></li>
+          <!-- <li class="nav-link"><a href="">Link2</a></li>
           <li class="nav-link"><a href="">Link3</a></li>
           <li class="nav-link"><a href="">Link4</a></li>
-          <li class="nav-link"><a href="">Link5</a></li>
+          <li class="nav-link"><a href="">Link5</a></li> -->
         </ul>
       </div>
       <div class="container p-5">
