--- a/about.html
+++ b/about.html
@@ -3,25 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <title>Mid Heavy</title>
-    <link rel="icon" type="image/png" href="../assets/favicon.png" />
-    <met.a
+    <link rel="icon" type="image/png" href="./assets/favicon.png" />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
 
     <!-- CSS IMPORTS-->
-    <link rel="stylesheet" media="screen" href="../css/" />
-    <link rel="stylesheet" media="screen" href="../css/style.css" />
+    <link rel="stylesheet" media="screen" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" media="screen" href="css/style.css" />
   </head>
+  
   <body>
-    <!-- particles.js container -->
-    <div class="image-box d">
+
+    <!-- NAV BAR -->
+    <nav class="image-box d">
       <div class="navbar-wrapper">
         <ul class="navbar">
           <li class="nav-logo-wrapper">
@@ -42,37 +38,8 @@
           <li class="nav-link"><a href="">Link4</a></li>
           <li class="nav-link"><a href="">Link5</a></li> -->
         </ul>
-      </div>
-      <div class="container p-5">
-        <div class="jumbotron m-auto mt-5" style="max-width: 75">
-          <h1 class="display-4">Welcome To Bootstrap!</h1>
-          <br />
-          <h5 class="left lead text-dark">Useful Links:</h5>
-          <br />
-          <ul>
-            <li>
-              <a href="https://getbootstrap.com/docs/4.0/components/"
-                >The Bootstrap 4 Docs - Components</a
-              >
-            </li>
-            <li>
-              <a href="https://bootswatch.com/">Bootswatch</a>
-            </li>
-            <li>
-              <a href="https://css-tricks.com/practical-css-scroll-snapping/"
-                >Scroll Snapping Info</a
-              >
-            </li>
-          </ul>
-          <hr class="my-4" />
-          <p class="lead text-dark ml-5 mr-5">
-            This component is called a Jumbotron! It uses utility classes for
-            typography and spacing to space content out within the larger
-            container.
-          </p>
-        </div>
-      </div>
-    </div>
+      </nav>
+
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
@@ -80,13 +47,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <!-- <script type="module" src="/app.js" /> -->
+
+
+    <!-- PARTICLE JS CONAITER / TARGET -->
     <div id="particles-js"></div>
 
+    <!-- libraries -->
+    <script src="./js/lib/particles.js"></script>
     <!-- scripts -->
-    <script src="../js/lib/bootstrap.js"></script>
-    <script src="../js/lib/particles.js"></script>
-
-    <script src="../js/app.js"></script>
   </body>
 </html>
