Fleshed out about page

--- a/about.html
+++ b/about.html
@@ -15,9 +15,11 @@
   </head>
   
   <body>
+    <!-- PARTICLE JS CONAITER / TARGET -->
+    <div id="particles-js"></div>
 
     <!-- NAV BAR -->
-    <nav class="image-box d">
+    <div class="image-box d">
       <div class="navbar-wrapper">
         <ul class="navbar">
           <li class="nav-logo-wrapper">
@@ -38,9 +40,18 @@
           <li class="nav-link"><a href="">Link4</a></li>
           <li class="nav-link"><a href="">Link5</a></li> -->
         </ul>
-      </nav>
+      </div>
 
+      <div style="margin-top: 15%;" class="container">
+        <div style="max-width: 65em; text-align: center;" class="mx-auto">
+          <p class="h1 text-success">ABOUT US</p>
+      
+          <p>Mid Heavy is a team of tech enthusiasts, passionate about making cool projects, and learning along the way!</p>
+          <button style="border-radius: 10px;" type="button" class="btn btn-dark mt-4 pl-3 pr-3">Learn More</button>
+        </div>
 
+      </div>
+     
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
       integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q=="
@@ -48,12 +59,9 @@
       referrerpolicy="no-referrer"
     ></script>
 
-
-    <!-- PARTICLE JS CONAITER / TARGET -->
-    <div id="particles-js"></div>
-
     <!-- libraries -->
     <script src="./js/lib/particles.js"></script>
+    <script src="./js/about.js"></script>
     <!-- scripts -->
   </body>
 </html>
