--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
           </li>
           <li class="nav-link"><a href="/about.html">About</a></li>
           <li class="nav-link"><a href="/contact.html">Contact</a></li>
-          <!-- <li class="nav-link"><a href="">Link3</a></li>
-          <li class="nav-link"><a href="">Link4</a></li>
-          <li class="nav-link"><a href="">Link5</a></li> -->
+          <!-- <li class="nav-link"><a href="">Link3</a></li> -->
+          <!--<li class="nav-link"><a href="">Link4</a></li> -->
+          <!--<li class="nav-link"><a href="">Link5</a></li> -->
         </ul>
       </div>
 
