--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             >
           </li>
           <li class="nav-link"><a href="/about.html">About</a></li>
-          <!-- <li class="nav-link"><a href="">Link2</a></li>
-          <li class="nav-link"><a href="">Link3</a></li>
+          <li class="nav-link"><a href="/contact.html">Contact</a></li>
+          <!-- <li class="nav-link"><a href="">Link3</a></li>
           <li class="nav-link"><a href="">Link4</a></li>
           <li class="nav-link"><a href="">Link5</a></li> -->
         </ul>
