--- a/contact.html
+++ b/contact.html
@@ -56,13 +56,18 @@
                 <input type="text" id="lname" name="lastname" placeholder="Your last name..">
                 <label for="country">Country</label>
                 <select id="country" name="country">
-                  <option value="australia">Australia</option>
+                  <option value="australia">Europe</option>
                   <option value="canada">Canada</option>
                   <option value="usa">USA</option>
+                  <option value="usa">Norway</option>
+                  <option value="usa">Singapor</option>
+                  <option value="usa">Greenland</option>
+                  <option value="usa">Iceland</option>
+                  <option value="usa">New Zealand</option>
                 </select>
                 <label for="subject">Subject</label>
                 <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-                <input type="submit" value="Submit">
+                <input style="border-radius: 10px;" type="submit" class="btn btn-dark mt-4 pl-3 pr-3">Submit>
               </form>
             </div>
           </div>
