--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,11 @@
             <div class="column">
               <form action="/action_page.php">
                 <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <input style="border-radius: 10px;"  type="text" id="fname" name="firstname" placeholder="Your name..">
                 <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <input style="border-radius: 10px;"  type="text" id="lname" name="lastname" placeholder="Your last name..">
                 <label for="country">Country</label>
-                <select id="country" name="country">
+                <select style="border-radius: 10px;"  id="country" name="country">
                   <option value="australia">Europe</option>
                   <option value="canada">Canada</option>
                   <option value="usa">USA</option>
@@ -66,7 +66,7 @@
                   <option value="usa">New Zealand</option>
                 </select>
                 <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+                <textarea style="height:250px; border-radius: 20px;" id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
                 <input style="border-radius: 10px;" type="submit" class="btn btn-dark mt-4 pl-3 pr-3">Submit>
               </form>
             </div>
