--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,11 @@
                   <option value="australia">Europe</option>
                   <option value="canada">Canada</option>
                   <option value="usa">USA</option>
-                  <option value="usa">Norway</option>
-                  <option value="usa">Singapor</option>
-                  <option value="usa">Greenland</option>
-                  <option value="usa">Iceland</option>
-                  <option value="usa">New Zealand</option>
+                  <option value="norway">Norway</option>
+                  <option value="singapor">Singapor</option>
+                  <option value="greenland">Greenland</option>
+                  <option value="iceland">Iceland</option>
+                  <option value="new zealand">New Zealand</option>
                 </select>
                 <label for="subject">Subject</label>
                 <textarea style="height:250px; border-radius: 20px;" id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
