--- a/contact.html
+++ b/contact.html
@@ -23,16 +23,13 @@
       <div class="navbar-wrapper">
         <ul class="navbar">
           <li class="nav-logo-wrapper">
-            <a href="/index.html"
-              ><img
                 src="../assets/logo.svg"
                 class="nav-logo"
                 width="93.75"
                 height="92.25"
                 alt="logo"
               />
-              <div class="nav-mh">MidHeavy</div></a
-            >
+              <div class="nav-mh">MidHeavy</div></a>
           </li>
           <li class="nav-link"><a href="/about.html">About</a></li>
           <li class="nav-link"><a href="/contact.html">Contact</a></li>
@@ -41,7 +38,6 @@
           <!--<li class="nav-link"><a href="">Link5</a></li> -->
         </ul>
       </div>
-
         <div class="container">
           <div style="text-align:center">
             <p class="h2 text-info">Contact Us</p>
@@ -53,7 +49,7 @@
                 <label for="fname">First Name</label>
                 <input style="border-radius: 10px;"  type="text" id="fname" name="firstname" placeholder="Your name..">
                 <label for="lname">Last Name</label>
-                <input style="border-radius: 10px;"  type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <input style="border-radius: 10px;"  type="text" id="lname" name="lastname" placeholder="Your last name">
                 <label for="country">Country</label>
                 <select style="border-radius: 10px;"  id="country" name="country">
                   <option value="australia">Europe</option>
@@ -83,8 +79,7 @@
 
       </div> -->
      
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
+    <script>src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
       integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
