--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
       <div class="navbar-wrapper">
         <ul class="navbar">
           <li class="nav-logo-wrapper">
+            <a href="/index.html"><img
                 src="../assets/logo.svg"
                 class="nav-logo"
                 width="93.75"
