--- a/contact.html
+++ b/contact.html
@@ -39,21 +39,19 @@
           <!--<li class="nav-link"><a href="">Link5</a></li> -->
         </ul>
       </div>
-        <div class="container">
+        <div class="container m-auto">
           <div style="text-align:center">
-            <p class="h2 text-info">Contact Us</p>
-            <p>leave us a message</p>
+            <p class="h1 text-info">Contact Us</p>
+            <p>Send us a message!</p>
           </div>
-          <div class="row">
-            <div class="column">
               <form action="/action_page.php">
-                <label for="fname">First Name</label>
-                <input style="border-radius: 10px;"  type="text" id="fname" name="firstname" placeholder="Your name..">
-                <label for="lname">Last Name</label>
-                <input style="border-radius: 10px;"  type="text" id="lname" name="lastname" placeholder="Your last name">
-                <label for="country">Country</label>
+                <label class="text-info" for="name">Name</label>
+                <input style="border-radius: 10px;" type="text" id="fname" name="firstname" placeholder="Your name..">
+                <label class="text-info" for="email">Email</label>
+                <input style="border-radius: 10px;" type="email" id="email" name="email" placeholder="Your Email">
+                <label class="text-info" for="country">Country</label>
                 <select style="border-radius: 10px;"  id="country" name="country">
-                  <option value="australia">Europe</option>
+                  <option value="europe">Europe</option>
                   <option value="canada">Canada</option>
                   <option value="usa">USA</option>
                   <option value="norway">Norway</option>
@@ -62,13 +60,15 @@
                   <option value="iceland">Iceland</option>
                   <option value="new zealand">New Zealand</option>
                 </select>
-                <label for="subject">Subject</label>
-                <textarea style="height:250px; border-radius: 20px;" id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-                <input style="border-radius: 10px;" type="submit" class="btn btn-dark mt-4 pl-3 pr-3">Submit>
+                <label class="text-info" for="message">Message</label>
+                <textarea style="height:250px; border-radius: 20px;" id="message" name="message" placeholder="Write something.." style="height:170px"></textarea>
+                <input style="border-radius: 10px; max-width: 48%"  type="submit" class="btn btn-info btn-block pl-3 pr-3 m-auto">
               </form>
             </div>
           </div>
         </div>
+
+        
 
       <!-- <div style="margin-top: 15%;" class="container">
         <div style="max-width: 65em; text-align: center;" class="mx-auto">
@@ -84,7 +84,7 @@
       integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script>
+    </script>
 
     <!-- libraries -->
     <script src="./js/lib/particles.js"></script>
