--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <body>
     <!-- PARTICLE JS CONAITER / TARGET -->
     <div id="particles-js"></div>
-    <!-- NAV BAR -->
-    <nav class="image-box d">
-      <div class="navbar-wrapper">
+   <nav class="image-box d">
+    <!-- NAV BAR -->      
+      <div class="navbar-wrapper w-100">
         <ul class="navbar">
           <li class="nav-logo-wrapper">
             <a href="/index.html"
