--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
     <!-- PARTICLE JS CONAITER / TARGET -->
     <div id="particles-js"></div>
 
+    <!-- NAV BAR -->
     <div class="image-box d">
-      <!-- NAV BAR -->
-      <div class="navbar-wrapper w-100">
+      <div class="navbar-wrapper">
         <ul class="navbar">
           <li class="nav-logo-wrapper">
             <a href="/index.html"
