--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
     <!-- CSS IMPORTS-->
     <link rel="stylesheet" media="screen" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" media="screen" href="css/style.css" />
+    <link rel="stylesheet" media="screen" href="css/index.css" />
   </head>
   
   <body>
     <!-- PARTICLE JS CONAITER / TARGET -->
     <div id="particles-js"></div>
     <!-- NAV BAR -->
-    <nav class="image-box d">
       <div class="navbar-wrapper">
         <ul class="navbar">
           <li class="nav-logo-wrapper">
@@ -39,7 +38,7 @@
           <li class="nav-link"><a href="">Link4</a></li>
           <li class="nav-link"><a href="">Link5</a></li> -->
         </ul>
-      </nav>
+      </div>
 
     <!-- MAIN CONTENT -->
 
