--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- CSS IMPORTS-->
     <link rel="stylesheet" media="screen" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" media="screen" href="css/index.css" />
+    <link rel="stylesheet" media="screen" href="css/style.css" />
   </head>
   
   <body>
@@ -21,22 +21,18 @@
       <div class="navbar-wrapper">
         <ul class="navbar">
           <li class="nav-logo-wrapper">
-            <a href="/index.html"
-              ><img
+            <a href="/index.html"><img
                 src="../assets/logo.svg"
                 class="nav-logo"
                 width="93.75"
                 height="92.25"
                 alt="logo"
               />
-              <div class="nav-mh">MidHeavy</div></a
-            >
+              <div class="nav-mh">MidHeavy</div></a>
           </li>
           <li class="nav-link"><a href="/about.html">About</a></li>
           <li class="nav-link"><a href="/contact.html">Contact</a></li>
-          <!-- <li class="nav-link"><a href="">Link3</a></li>
-          <li class="nav-link"><a href="">Link4</a></li>
-          <li class="nav-link"><a href="">Link5</a></li> -->
+
         </ul>
       </div>
 
@@ -108,13 +104,7 @@
       </div>
     </div>
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
-      integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"  integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
     <!-- libraries -->
