--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       media="screen"
       href="css/bootstrap/bootstrap.min.css"
     />
-    <link rel="stylesheet" media="screen" href="css/about.css" />
+    <link rel="stylesheet" media="screen" href="css/style.css" />
   </head>
 
   <body>
