--- a/Legacy/about.html
+++ b/Legacy/about.html
@@ -34,8 +34,7 @@
               height="92.25"
               alt="logo"
             />
-            <div class="nav-mh">MidHeavy</div></a
-          >
+            <div class="nav-mh">MidHeavy</div></a>
         </li>
         <li class="nav-link"><a href="/about.html">About</a></li>
         <li class="nav-link"><a href="/contact.html">Contact</a></li>
